--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -220,6 +220,7 @@ jobs:
           shopt -s globstar
           ls -ltah artifacts
           VERSION="$(cat artifacts/version/version.txt)"
+          find . -name *.zip -type f -print0 | xargs -0 md5sum > checksums.md5
           find . -name *.tar.gz -type f -print0 | xargs -0 md5sum > checksums.md5
           find . -name *.tar.gz -type f -print0 | xargs -0 sha256sum > checksums.sha256
           curl -s https://api.github.com/repos/laravel/framework/releases/tags/$VERSION > notes.md
@@ -231,6 +232,7 @@ jobs:
         run: |
           VERSION="$(cat artifacts/version/version.txt)"
           ls -ltah artifacts
+          ls -ltah artifacts/app
           aws s3 cp artifacts s3://${{ secrets.AWS_S3_BUCKET }}/artifacts/laravel/${VERSION} --recursive
           aws s3 cp artifacts/app/app.tar.gz s3://${{ secrets.AWS_S3_BUCKET }}/artifacts/laravel/${VERSION}/app.tar.gz
           # aws s3 cp artifacts/simple/simple.tar.gz s3://${{ secrets.AWS_S3_BUCKET }}/artifacts/laravel/${VERSION}/app-simple.tar.gz
