--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -170,10 +170,10 @@ jobs:
           name: version
       - name: Build custom
         id: flavor
-        continue-on-error: true
+        continue-on-error: false
         run: |
           #!/usr/bin/env bash
-          # set -euo pipefail
+          set -euo pipefail
           dirname=${{ matrix.flavor }}
           mkdir -p $dirname
           mkdir -p /tmp/${{ matrix.flavor }}
@@ -236,7 +236,7 @@ jobs:
           ls -ltah artifacts/app
           aws s3 cp artifacts s3://${{ secrets.AWS_S3_BUCKET }}/artifacts/laravel/${VERSION} --recursive
           aws s3 cp artifacts/app/app.tar.gz s3://${{ secrets.AWS_S3_BUCKET }}/artifacts/laravel/${VERSION}/app.tar.gz
-          # aws s3 cp artifacts/simple/simple.tar.gz s3://${{ secrets.AWS_S3_BUCKET }}/artifacts/laravel/${VERSION}/app-simple.tar.gz
+          aws s3 cp artifacts/simple/simple.tar.gz s3://${{ secrets.AWS_S3_BUCKET }}/artifacts/laravel/${VERSION}/app-simple.tar.gz
       - uses: buildpacks/github-actions/setup-pack@v4.4.2
       - uses: dev-drprasad/delete-tag-and-release@v0.2.0
         with:
