--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -185,6 +185,8 @@ jobs:
           chmod +x ./scripts/features.sh
           export LARAVEL_DIR_APP="${cwd}/${dirname}"
 
+          # remove existing builder if any
+          docker rm $(docker ps -aq --filter name=builder)
           ./scripts/features.sh "--${{ matrix.flavor }}"
 
           pushd ${cwd}/${dirname}
