--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -201,8 +201,8 @@ jobs:
       - name: Adding markdown
         run: |
           echo '### ${{ matrix.flavor }} :rocket:' >> $GITHUB_STEP_SUMMARY
-          md5sum ${{ matrix.flavor }}.tar.gz >> $GITHUB_STEP_SUMMARY
-          md5sum ${{ matrix.flavor }}.zip >> $GITHUB_STEP_SUMMARY
+          md5sum /tmp/${{ matrix.flavor }}/${{ matrix.flavor }}.tar.gz >> $GITHUB_STEP_SUMMARY
+          md5sum /tmp/${{ matrix.flavor }}/${{ matrix.flavor }}.zip >> $GITHUB_STEP_SUMMARY
 
       - name: Upload artifact
         uses: actions/upload-artifact@v2
