--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -183,15 +183,7 @@ jobs:
           tar -zxf app.tar.gz -C $dirname
           sudo chmod 666 /var/run/docker.sock
           chmod +x ./scripts/features.sh
-          export LARAVEL_DIR_APP="${cwd}/${dirname}"
-
-          # remove existing builder if any (before)
-          [ "$(docker ps -a --format '{{.Image}} {{.Names}}' | grep builder)" ] && docker rm -f $(docker ps -aq --filter name=builder)
-          
-          ./scripts/features.sh "--${{ matrix.flavor }}"
-          
-          # remove existing builder if any (after)
-          [ "$(docker ps -a --format '{{.Image}} {{.Names}}' | grep builder)" ] && docker rm -f $(docker ps -aq --filter name=builder)
+          LARAVEL_DIR_APP="${cwd}/${dirname}" ./scripts/features.sh "--${{ matrix.flavor }}"
 
           pushd ${cwd}/${dirname}
           tar -czf /tmp/${{ matrix.flavor }}/${{ matrix.flavor }}.tar.gz .
