--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Artifact Laravel application
+name: Builder
 on:
   workflow_dispatch:
   schedule:
@@ -146,6 +146,7 @@ jobs:
       - base
     runs-on: ubuntu-latest
     strategy:
+      max-parallel: 1
       matrix:
         operating-system: [ ubuntu-latest ]
         flavor: [ 'simple', 'with-breeze','with-jetstream' ]
@@ -168,8 +169,9 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: version
-      - id: flavor
-        continue-on-error: true
+      - name: Build custom
+        id: flavor
+        continue-on-error: false
         run: |
           #!/usr/bin/env bash
           set -euo pipefail
@@ -181,16 +183,22 @@ jobs:
           tar -zxf app.tar.gz -C $dirname
           sudo chmod 666 /var/run/docker.sock
           chmod +x ./scripts/features.sh
-          export LARAVEL_DIR_APP="${cwd}/${dirname}"
-
-          ./scripts/features.sh "--${{ matrix.flavor }}"
+          LARAVEL_DIR_APP="${cwd}/${dirname}" ./scripts/features.sh "--${{ matrix.flavor }}"
 
           pushd ${cwd}/${dirname}
           tar -czf /tmp/${{ matrix.flavor }}/${{ matrix.flavor }}.tar.gz .
           zip -r /tmp/${{ matrix.flavor }}/${{ matrix.flavor }}.zip .
           popd
 
-          ls /tmp/${{ matrix.flavor }}.tar.gz
+      - name: Adding markdown
+        run: |
+          echo '### ${{ matrix.flavor }} :rocket:' >> $GITHUB_STEP_SUMMARY
+          echo '**Checksums**' >> $GITHUB_STEP_SUMMARY
+          pushd /tmp/${{ matrix.flavor }}
+          md5sum ${{ matrix.flavor }}.tar.gz >> $GITHUB_STEP_SUMMARY
+          md5sum ${{ matrix.flavor }}.zip >> $GITHUB_STEP_SUMMARY
+          popd
+
       - name: Upload artifact
         uses: actions/upload-artifact@v2
         with:
@@ -220,6 +228,7 @@ jobs:
           shopt -s globstar
           ls -ltah artifacts
           VERSION="$(cat artifacts/version/version.txt)"
+          find . -name *.zip -type f -print0 | xargs -0 md5sum > checksums.md5
           find . -name *.tar.gz -type f -print0 | xargs -0 md5sum > checksums.md5
           find . -name *.tar.gz -type f -print0 | xargs -0 sha256sum > checksums.sha256
           curl -s https://api.github.com/repos/laravel/framework/releases/tags/$VERSION > notes.md
@@ -230,6 +239,8 @@ jobs:
       - name:  Copy dist to S3
         run: |
           VERSION="$(cat artifacts/version/version.txt)"
+          ls -ltah artifacts
+          ls -ltah artifacts/app
           aws s3 cp artifacts s3://${{ secrets.AWS_S3_BUCKET }}/artifacts/laravel/${VERSION} --recursive
           aws s3 cp artifacts/app/app.tar.gz s3://${{ secrets.AWS_S3_BUCKET }}/artifacts/laravel/${VERSION}/app.tar.gz
           aws s3 cp artifacts/simple/simple.tar.gz s3://${{ secrets.AWS_S3_BUCKET }}/artifacts/laravel/${VERSION}/app-simple.tar.gz
@@ -244,12 +255,30 @@ jobs:
       - uses: ncipollo/release-action@v1
         id: xrelease
         with:
-          allowUpdates: true
+          allowUpdates: false
           # Pending. I need to check the status code in case the release hasn't been published in Github repository yet
           #          bodyFile: notes.md
           bodyFile: release.md
           tag: ${{ steps.dist.outputs.version }}
-          artifacts: "artifacts/**/*.tar.gz,checksums.*"
+          artifacts: "artifacts/**/*.tar.gz,artifacts/**/*.zip,checksums.*"
+          removeArtifacts: true
+          token: ${{ secrets.RELEASE_TOKEN }}
+      - uses: dev-drprasad/delete-tag-and-release@v0.2.0
+        with:
+          delete_release: true # default: false
+          tag_name: latest
+          repo: laraboot-io/laravel-images
+        env:
+          GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
+      - uses: ncipollo/release-action@v1
+        id: latestrelease
+        with:
+          allowUpdates: true
+          # Pending. I need to check the status code in case the release hasn't been published in Github repository yet
+          #          bodyFile: notes.md
+          bodyFile: release.md
+          tag: latest
+          artifacts: "artifacts/**/*.tar.gz,artifacts/**/*.zip,checksums.*"
           removeArtifacts: true
           token: ${{ secrets.RELEASE_TOKEN }}
       - uses: actions/checkout@v2
