chore: clean docker after each build variant and only install laraboot if is not there yet

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -175,6 +175,8 @@ jobs:
         run: |
           #!/usr/bin/env bash
           set -euo pipefail
+          # Having a fresh start
+          docker system prune --all -f
           dirname=${{ matrix.flavor }}
           mkdir -p $dirname
           mkdir -p /tmp/${{ matrix.flavor }}
