--- a/.github/workflows/gh-on-release.yml
+++ b/.github/workflows/gh-on-release.yml
@@ -24,7 +24,7 @@ jobs:
             mkdir -p content/posts
             pushd themes
               git clone https://github.com/ronv/minimalist.git
-              rm -rf listed/content/*
+              rm -rf minimalist/content/*
             popd
             
             file="content/posts/${{ github.sha }}.md"
