wip: release notes

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,7 +5,10 @@ on:
     - cron: "0 * * * *"
   push:
     branches:
-      - feature/grab-release-content
+      - feature/*
+      - main
+      - dev
+      - master
 
 jobs:
   base:
