wip: release notes

--- a/.github/workflows/generate-releases-content.yml
+++ b/.github/workflows/generate-releases-content.yml
@@ -1,4 +1,4 @@
-name: grab-release-content
+name: generate-releases-content
 on:
   push:
     branches:
@@ -12,4 +12,4 @@ jobs:
       - id: release
         run: |
           echo 1
-          wget https://api.github.com/repos/laravel/framework/tags | jq .
+          curl https://api.github.com/repos/laravel/framework/tags | jq .
