--- a/.github/workflows/generate-releases-content.yml
+++ b/.github/workflows/generate-releases-content.yml
@@ -11,5 +11,10 @@ jobs:
     steps:
       - id: release
         run: |
-          echo 1
-          curl https://api.github.com/repos/laravel/framework/tags | jq .
+          tags=$(curl https://api.github.com/repos/laravel/framework/tags | jq -rc '.')
+          for row in $(echo "${tags}" | jq -r '.[] | @base64'); do
+              _jq() {
+               echo ${row} | base64 --decode | jq -r ${1}
+              }
+             echo $(_jq '.name')
+          done
