--- a/.github/workflows/generate-releases-content.yml
+++ b/.github/workflows/generate-releases-content.yml
@@ -9,14 +9,58 @@ jobs:
     name: GenerateReleasesContent
     runs-on: ubuntu-latest
     steps:
-      - id: release
-        run: |
-          tags=$(curl https://api.github.com/repos/laravel/framework/tags | jq -rc '.')
-          for row in $(echo "${tags}" | jq -r '.[] | @base64'); do
-              _jq() {
-               echo ${row} | base64 --decode | jq -r ${1}
-              }
-             echo $(_jq '.name')
-             echo $(_jq '.zipball_url')
-             echo "----- \n"
-          done
+      - name: Create content
+        run : |
+          pushd docs
+            mkdir themes
+          
+            pushd themes
+              git clone https://github.com/ronv/minimalist.git
+              rm -rf minimalist/content/*
+            popd
+          
+            mkdir -p content/writing
+            
+          
+            tags=$(curl https://api.github.com/repos/laravel/framework/tags | jq -rc '.')
+            for row in $(echo "${tags}" | jq -r '.[] | @base64'); do
+                _jq() {
+                 echo ${row} | base64 --decode | jq -r ${1}
+                }
+               tag=$(_jq '.name')
+               url=$(_jq '.zipball_url')
+               echo "-----"
+                file="content/writing/${tag}.md"
+                touch $file
+                echo "---" > $file
+                echo "title: \"${tag}\"" >> $file
+                echo "date: 2021-11-14T22:40:38Z" >> $file
+                echo "draft: false" >> $file
+                echo "---" >> $file
+                echo "" >> $file
+                echo "${url}" >> $file
+            done
+          
+            hugo -D -b https://laraboot-io.github.io/laravel-images/ -t minimalist
+          popd
+
+      - name: Publish content
+        uses: stefanzweifel/git-auto-commit-action@v4
+        id: auto-commit-action
+        with:
+          commit_message: 'New content: ${{ github.sha }}'
+          commit_options: '--allow-empty'
+          repository: .
+          status_options: '--untracked-files=no'
+          file_pattern: 'docs/content/**/*'
+          push_options: '--force'
+          skip_dirty_check: true
+          skip_fetch: true
+          disable_globbing: true
+
+      - name: Update Gh-pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_branch: gh-pages
+          publish_dir: ./docs/public
