wip: release notes

--- a/.github/workflows/generate-releases-content.yml
+++ b/.github/workflows/generate-releases-content.yml
@@ -11,6 +11,7 @@ jobs:
     steps:
       - name: Create content
         run : |
+          mkdir docs
           pushd docs
             mkdir themes
           
