--- a/.github/workflows/gh-on-release.yml
+++ b/.github/workflows/gh-on-release.yml
@@ -23,8 +23,8 @@ jobs:
             mkdir themes
             
             pushd themes
-              git clone https://github.com/ronv/minimalist.git
-              rm -rf minimalist/content/*
+              git clone https://github.com/laraboot-io/images-theme.git
+              rm -rf images-theme/content/*
             popd
             
             mkdir -p content/writing
@@ -39,7 +39,7 @@ jobs:
             echo "" >> $file
             echo "${{ github.sha }}" >> $file
   
-            hugo -D -b https://laraboot-io.github.io/laravel-images/ -t minimalist
+            hugo -D -b https://laraboot-io.github.io/laravel-images/ -t images-theme
           popd
 
       - name: Publish content
