--- a/.github/workflows/gh-on-release.yml
+++ b/.github/workflows/gh-on-release.yml
@@ -1,9 +1,9 @@
 name: gh-on-issue
 
 on:
-  push:
-    branches:
-      - dev
+  release:
+    types:
+      - created
 
 jobs:
   job1:
@@ -17,7 +17,14 @@ jobs:
 
       - uses: actions/checkout@v2
 
+      - name: Get the version
+        id: get_version
+        run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
+        shell: bash
+
       - name: Create content
+        env:
+          RELEASE_VERSION: ${{ steps.get_version.outputs.VERSION }}
         run : |
           pushd docs
             mkdir themes
@@ -32,12 +39,12 @@ jobs:
   
             touch $file
             echo "---" > $file
-            echo "title: \"${{ github.sha }}\"" >> $file
+            echo "title: \"${RELEASE_VERSION}\"" >> $file
             echo "date: 2021-11-14T22:40:38Z" >> $file
             echo "draft: false" >> $file
             echo "---" >> $file
             echo "" >> $file
-            echo "${{ github.sha }}" >> $file
+            echo "${RELEASE_VERSION}" >> $file
   
             hugo -D -b https://laraboot-io.github.io/laravel-images/ -t images-theme
           popd
