chore: let's use tags instead release events

--- a/.github/workflows/gh-on-release.yml
+++ b/.github/workflows/gh-on-release.yml
@@ -1,10 +1,9 @@
 name: gh-on-issue
 
 on:
-  release:
-    types:
-      - created
-      - published
+  push:
+    tags:
+      - '*'
 
 jobs:
   job1:
