--- a/.github/workflows/generate-releases-content.yml
+++ b/.github/workflows/generate-releases-content.yml
@@ -1,8 +1,6 @@
 name: generate-releases-content
 on:
-  push:
-    branches:
-      - feature/grab-release-content
+  workflow_dispatch:
 
 jobs:
   build:
@@ -15,6 +13,9 @@ jobs:
           hugo-version: '0.91.2'
           extended: true
       - uses: actions/checkout@v2
+        with:
+          ref: releases
+          fetch-depth: 0 # To get all tags
       - name: Create content
         run : |
           mkdir docs
@@ -22,12 +23,11 @@ jobs:
             mkdir themes
           
             pushd themes
-              git clone https://github.com/ronv/minimalist.git
-              rm -rf minimalist/content/*
+              git clone https://github.com/laraboot-io/images-theme.git
+              rm -rf images-theme/content/*
             popd
           
             mkdir -p content/writing
-            
           
             tags=$(curl https://api.github.com/repos/laravel/framework/tags | jq -rc '.')
             for row in $(echo "${tags}" | jq -r '.[] | @base64'); do
@@ -48,7 +48,7 @@ jobs:
                 echo "${url}" >> $file
             done
           
-            hugo -D -b https://laraboot-io.github.io/laravel-images/ -t minimalist
+            hugo -D -b https://laraboot-io.github.io/laravel-images/ -t images-theme
           popd
 
       - name: Publish content
