chore: release once

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -249,6 +249,11 @@ jobs:
           repo: laraboot-io/laravel-images
         env:
           GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
+      - uses: dev-drprasad/delete-tag-and-release@v0.2.0
+        with:
+          delete_release: true # default: false
+          tag_name: ${{ steps.dist.outputs.version }}
+          repo: laraboot-io/laravel-images
       - uses: ncipollo/release-action@v1
         id: xrelease
         with:
@@ -260,24 +265,8 @@ jobs:
           artifacts: "artifacts/**/*.tar.gz,artifacts/**/*.zip,checksums.*"
           removeArtifacts: true
           token: ${{ secrets.RELEASE_TOKEN }}
-      - uses: dev-drprasad/delete-tag-and-release@v0.2.0
-        with:
-          delete_release: true # default: false
-          tag_name: latest
-          repo: laraboot-io/laravel-images
         env:
           GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
-      - uses: ncipollo/release-action@v1
-        id: latestrelease
-        with:
-          allowUpdates: true
-          # Pending. I need to check the status code in case the release hasn't been published in Github repository yet
-          #          bodyFile: notes.md
-          bodyFile: release.md
-          tag: latest
-          artifacts: "artifacts/**/*.tar.gz,artifacts/**/*.zip,checksums.*"
-          removeArtifacts: true
-          token: ${{ secrets.RELEASE_TOKEN }}
       - uses: actions/checkout@v2
       - run: |
           readonly releaseid="${{ steps.xrelease.outputs.id }}"
