--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -164,6 +164,10 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: version
+      - id: getversion
+        run: |
+          VERSION="$(cat artifacts/version/version.txt)"
+          echo "::set-output name=version::$VERSION"
       - name: Build custom
         id: flavor
         continue-on-error: false
@@ -186,6 +190,25 @@ jobs:
           tar -czf /tmp/${{ matrix.flavor }}/${{ matrix.flavor }}.tar.gz .
           zip -r /tmp/${{ matrix.flavor }}/${{ matrix.flavor }}.zip .
           popd
+
+      - name: Docker login
+        uses: docker/login-action@v1
+        if: matrix.flavor == 'simple'
+        with:
+          registry: docker.io
+          username: ${{ secrets.DOCKER_HUB_USER }}
+          password: ${{ secrets.DOCKER_HUB_PASS }}
+
+      - name: CR Release
+        if: matrix.flavor == 'simple'
+        env:
+          LOCAL_IMAGE: ${{ matrix.flavor }}
+          IMAGE_TAG: ${{ steps.dist.outputs.version }}
+          RELEASE: ${{ fromJSON('["no", "yes"]')[github.ref != 'refs/heads/main'] }}
+          ECR_REGISTRY: docker.io
+        run: |
+          chmod +x ./scripts/release-build-cr.sh
+          ./scripts/release-build-cr.sh
 
       - name: Adding markdown
         run: |
